--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.41",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-image-crop": "^8.6.6",
     "react-scripts": "4.0.1",
+    "typescript": "^4.2.4",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
@@ -38,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-image-crop": "^8.1.2",
+    "@types/uuid": "^8.3.0"
   }
 }
