--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.8",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.41",
-    "@types/react": "^17.0.3",
+    "@material-ui/core": "^4.11.4",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^12.20.11",
+    "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-image-crop": "^8.6.6",
-    "react-scripts": "4.0.1",
+    "@types/react-image-crop": "^8.1.2",
+    "@types/uuid": "^8.3.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-image-crop": "^8.6.9",
+    "react-scripts": "4.0.3",
     "typescript": "^4.2.4",
-    "uuid": "^8.3.2",
-    "web-vitals": "^0.2.4"
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,9 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-image-crop": "^8.1.2",
-    "@types/uuid": "^8.3.0"
   }
 }
