--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react-dom": "^17.0.3",
     "@types/react-image-crop": "^8.1.2",
     "@types/uuid": "^8.3.0",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-image-crop": "^8.6.9",
@@ -43,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/file-saver": "^2.0.2"
   }
 }
