--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.11",
     "@types/react": "^17.0.4",
@@ -14,11 +10,10 @@
     "@types/react-image-crop": "^8.1.2",
     "@types/uuid": "^8.3.0",
     "file-saver": "^2.0.5",
-    "jszip": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-image-crop": "^8.6.9",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "typescript": "^4.2.4",
     "uuid": "^8.3.2"
   },
