--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
     "name": "slice",
     "private": true,
-    "version": "0.2.0",
+    "version": "1.0.0",
     "type": "module",
     "scripts": {
-      "dev": "vite",
-      "build": "tsc && vite build",
-      "preview": "vite preview"
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
     },
     "dependencies": {
-      "@types/file-saver": "^2.0.5",
-      "@types/react-image-crop": "^8.1.3",
-      "@types/uuid": "^9.0.0",
-      "file-saver": "^2.0.5",
-      "install": "^0.13.0",
-      "jotai": "^2.0.0",
-      "npm": "^9.4.1",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "react-image-crop": "^10.0.9",
-      "uuid": "^9.0.0"
+        "@types/file-saver": "^2.0.5",
+        "@types/react-image-crop": "^8.1.3",
+        "@types/uuid": "^9.0.0",
+        "file-saver": "^2.0.5",
+        "install": "^0.13.0",
+        "jotai": "^2.0.0",
+        "jszip": "^3.10.1",
+        "npm": "^9.4.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-image-crop": "^10.0.9",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
-      "@types/node": "^18.13.0",
-      "@types/react": "^18.0.27",
-      "@types/react-dom": "^18.0.10",
-      "@vitejs/plugin-react-swc": "^3.0.0",
-      "typescript": "^4.9.3",
-      "typescript-plugin-css-modules": "^4.1.1",
-      "vite": "^4.1.0"
+        "@types/node": "^18.13.0",
+        "@types/react": "^18.0.27",
+        "@types/react-dom": "^18.0.10",
+        "@vitejs/plugin-react-swc": "^3.0.0",
+        "typescript": "^4.9.3",
+        "typescript-plugin-css-modules": "^4.1.1",
+        "vite": "^4.1.0"
     }
-  }
-  
+}
