--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     },
     "dependencies": {
         "@types/file-saver": "^2.0.5",
+        "@types/gif.js": "^0.2.2",
         "@types/react-image-crop": "^8.1.3",
         "@types/uuid": "^9.0.0",
         "file-saver": "^2.0.5",
+        "gifuct-js": "^2.1.2",
         "install": "^0.13.0",
         "jotai": "^2.0.0",
         "jszip": "^3.10.1",
