--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "lint": "eslint ./src --ext ts,tsx",
+        "lint-fix": "eslint ./src --fix --ext ts,tsx"
     },
     "dependencies": {
         "@types/file-saver": "^2.0.5",
@@ -29,8 +31,13 @@
         "@types/react": "^18.0.27",
         "@types/react-dom": "^18.0.10",
         "@vitejs/plugin-react-swc": "^3.0.0",
-        "typescript": "^4.9.3",
+        "typescript": "^4.9.5",
         "typescript-plugin-css-modules": "^4.1.1",
-        "vite": "^4.1.0"
+        "vite": "^4.1.0",
+        "@typescript-eslint/eslint-plugin": "^5.57.1",
+        "@typescript-eslint/parser": "^5.57.1",
+        "eslint": "^8.38.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.3.4"
     }
 }
