--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,7 @@
     "forceConsistentCasingInFileNames": true,
     
     /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
