--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@types/react-image-crop": "^8.1.3",
         "@types/uuid": "^9.0.0",
         "file-saver": "^2.0.5",
+        "gifenc": "git://github.com/mattdesl/gifenc#64842fc",
         "gifuct-js": "^2.1.2",
         "install": "^0.13.0",
         "jotai": "^2.0.0",
