--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,8 @@
     "plugins": ["react-refresh"],
     "rules": {
       "react-refresh/only-export-components": "warn",
-      "semi": "warn"
+      "semi": "warn",
+      "curly": ["warn", "multi"],
+      "eol-last": "warn"
     }
 }
