--- a/package.json
+++ b/package.json
@@ -12,30 +12,31 @@
     },
     "dependencies": {
         "@types/file-saver": "^2.0.5",
-        "@types/react-image-crop": "^8.1.3",
         "@types/uuid": "^9.0.0",
         "file-saver": "^2.0.5",
+        "gifenc": "git://github.com/mattdesl/gifenc#64842fc",
+        "gifuct-js": "^2.1.2",
         "install": "^0.13.0",
         "jotai": "^2.0.0",
         "jszip": "^3.10.1",
         "npm": "^9.4.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-image-crop": "^10.0.9",
+        "react-image-crop": "^10.1.5",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@types/node": "^18.13.0",
         "@types/react": "^18.0.27",
         "@types/react-dom": "^18.0.10",
-        "@vitejs/plugin-react-swc": "^3.0.0",
-        "typescript": "^4.9.5",
-        "typescript-plugin-css-modules": "^4.1.1",
-        "vite": "^4.1.0",
         "@typescript-eslint/eslint-plugin": "^5.57.1",
         "@typescript-eslint/parser": "^5.57.1",
+        "@vitejs/plugin-react-swc": "^3.0.0",
         "eslint": "^8.38.0",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.3.4"
+        "eslint-plugin-react-refresh": "^0.3.4",
+        "typescript": "^4.9.5",
+        "typescript-plugin-css-modules": "^4.1.1",
+        "vite": "^4.1.0"
     }
 }
