--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "npm": "^9.4.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-dropzone": "^14.2.3",
         "react-image-crop": "^10.1.5",
         "uuid": "^9.0.0"
     },
